risc0/zirgen/dsl/test/repro/illegal_binop_parse.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error:

component Top(x: Val) {
  a := if (xd+{.0 }.else { 1 };
  b := if ( { 0 };
}
